<resources>
    <string name="your_privacy_is_a_fundamental_right_html">Your privacy is a fundamental human right.</string>
    <string name="you_dont_need_a_vpn_to_use_frostwire_bullet_html"><![CDATA[* Although recommended for your downloads, <b>you do not need a VPN to use FrostWire. </b>]]></string>
    <string name="unprotected_connections_visibility_bullet_html"><![CDATA[ An unprotected connection means everything you do online (including <b>searches, messaging, and downloads</b>) may be monitored by anyone on your network and even by your Internet service provider.<br><br>We recommend using ExpressVPN to encrypt your connection and <b>safeguard your privacy</b>.]]></string>
    <string name="protected_connections_visibility_bullet_html"><![CDATA[ You\'re connected to the Internet using a VPN. <br><br> If you are not already, we recommend using <b>ExpressVPN</b> to encrypt your connection and <b>safeguard your privacy</b>. ]]></string>
    <string name="application_label">FrostWire</string>
    <string name="activity_preferences_name">Settings</string>
    <string name="activity_browse_peer_name">Browse Host</string>
    <string name="activity_browse_peers_name">People Nearby</string>
    <string name="activity_chat_name">Chat</string>
    <string name="activity_downloads_name">Active Downloads</string>
    <string name="activity_uploads_name">Active Uploads</string>
    <string name="activity_about">About</string>
    <string name="activity_debug_name">Debug</string>
    <string name="activity_VPN">Connection</string>
    <string name="disconnected">Disconnected</string>
    <string name="all_transfers_will_stop_are_you_sure">All transfers will stop.\nAre you sure?</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnecting">Disconnecting</string>
    <string name="wait">Wait</string>
    <string name="exit">Exit</string>
    <string name="no_wifi_want_to_fix_it_question">You\'re not connected to a Wi-Fi network.\n\nHow do you want to connect?</string>
    <string name="your_connection_has_dropped_stopping_services">Your Wi-Fi connection has dropped. Stopping services.</string>
    <string name="wifi_network_changed_restarting_services">The Wi-Fi network has changed. Restarting Services.</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="leaving_already">Leaving Already?</string>
    <string name="search_label">Search</string>
    <string name="settings_description">Search Settings</string>
    <string name="clear_finished">Clear Finished</string>
    <string name="support_free_software">Support Free Software</string>
    <string name="show_love">Love FrostWire?</string>
    <string name="waiting">Waiting…</string>
    <string name="use_icons_to_browse">Use the icons to browse files.</string>
    <string name="type_to_filter_results">Type to filter results.</string>
    <string name="fetching_file_list">Fetching list of shared</string>
    <string name="not_sharing_files">is not sharing any files.</string>
    <string name="browse_peer">Browse Peer</string>
    <string name="peer">Peer</string>
    <string name="peers">Peers</string>
    <string name="copy">Copy</string>
    <string name="audio">Audio</string>
    <string name="audio_music">Audio/Music</string>
    <string name="video">Video</string>
    <string name="application">Application</string>
    <string name="applications">Apps</string>
    <string name="picture">Picture</string>
    <string name="pictures">Pictures</string>
    <string name="ringtone">Ringtone</string>
    <string name="ringtones">Ringtones</string>
    <string name="document">Document</string>
    <string name="documents">Documents</string>
    <string name="share">Share</string>
    <string name="unshare">Unshare</string>
    <string name="sharing">Sharing</string>
    <string name="send_pm">Send Private Message</string>
    <string name="me">Me</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="download">Download</string>
    <string name="download_selected_files">Download Selected</string>
    <string name="toggle_sharing_selected_files">Toggle Sharing</string>
    <string name="change_manual_listening_port">Set Listening Port 1000 and 65535</string>
    <string name="is_not_responding">%s is not responding</string>
    <string name="max_concurrent_uploads">Maximum Simultaneous Uploads</string>
    <string name="search_no_keywords">Please enter search keywords</string>
    <string name="search_select_filetype">Please select a file type</string>
    <string name="select_all">Select All</string>
    <string name="select_deselect_all">Select/Deselect All</string>
    <string name="searching_for">Searching for</string>
    <string name="search_for_type_files">Search for %s files</string>
    <string name="update_title">Update time!</string>
    <string name="update_message">FrostWire has downloaded a new PERFORMANCE UPDATE for you, please go ahead and touch the OK button if you want to install it now.</string>
    <string name="next_time">Next Time</string>
    <string name="change_my_nickname">Change my nickname</string>
    <string name="try_changing_your_nickname">Enter your nickname</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="go_to">Go To</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_description">Enjoy the ad-free experience, support FrostWire</string>
    <string name="send_to_third_party">Send/Upload</string>
    <string name="send_file_using">Send file using</string>
    <string name="my_files">My Files</string>
    <string name="clear_messages">Clear messages</string>
    <string name="chat_actions">Chat Actions</string>
    <string name="settings">Settings</string>
    <string name="please_connect">Please connect to use this feature</string>
    <string name="remove">Remove</string>
    <string name="try_valid_port_next_time">Try a valid port next time 1000 and 65500</string>
    <string name="still_listening_on_port">Still listening on port</string>
    <string name="uh_still_listening_on_port">Uh? I\'m still listening on port</string>
    <string name="new_port_saved">New Port saved</string>
    <string name="now_on_port">Now on port</string>
    <string name="stop_all_transfers_message">This will cancel all ongoing and queued downloads. All transferred data will be lost. Are you sure?</string>
    <string name="files">files</string>
    <string name="touch_filetype_icon">Touch icon to change file type</string>
    <string name="tos_title">Terms of Use</string>
    <string name="tos_accept">Accept</string>
    <string name="tos_refuse">Refuse</string>
    <string name="downloads">Downloads</string>
    <string name="minimize_frostwire">Minimize FrostWire</string>
    <string name="are_you_sure_you_wanna_leave">Are you sure you want to go back to the home screen?</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="failed_to_set_wallpaper">Failed to set Wallpaper</string>
    <string name="tell_others_chooser">Tweet / SMS / Email</string>
    <string name="tell_others_subject">Got FrostWire for Android yet?</string>
    <string name="and_choose_what_filetypes_to_share">Check what types of files you\'d like to enable for sharing on the FrostWire Mobile Network and nearby Wi-Fi enabled Desktops.</string>
    <string name="vibrate_on_finished_download">Vibrate when download finishes</string>
    <string name="use_tpb">Use TPB</string>
    <string name="use_tpb_summary">TPB is magnet based, works only on Wi-Fi</string>
    <string name="use_monova">Use Monova</string>
    <string name="use_monova_summary">Monova is magnet based, works only on Wi-Fi</string>
    <string name="use_extratorrent">Use ExtraTorrent.com</string>
    <string name="use_mininova">Use Mininova.org</string>
    <string name="use_yify">Use Yify</string>
    <string name="use_yify_summary">Yify is magnet based, works only on Wi-Fi</string>
    <string name="torrent_settings">Torrent Preferences</string>
    <string name="torrent_max_download_speed_summary">Max Download Speed (0 means unlimited)</string>
    <string name="torrent_max_download_speed">Max download speed</string>
    <string name="torrent_max_upload_speed_summary">Max upload speed (0 means unlimited)</string>
    <string name="torrent_max_upload_speed">Max upload speed</string>
    <string name="torrent_max_downloads_summary">Max downloads</string>
    <string name="torrent_max_downloads">Max downloads</string>
    <string name="torrent_max_uploads_summary">Max uploads</string>
    <string name="torrent_max_uploads">Max uploads</string>
    <string name="torrent_max_total_connections_summary">Max total connections</string>
    <string name="torrent_max_total_connections">Max total connections</string>
    <string name="torrent_max_peers_summary">Max peers</string>
    <string name="torrent_max_peers">Max peers</string>
    <string name="seed_finished_torrents">Seed finished Torrents</string>
    <string name="seed_finished_torrents_summary">Share pieces of torrent downloads with anybody on the internet via BitTorrent</string>
    <string name="show_transfers_on_download_start">Show Transfers on download start</string>
    <string name="show_new_transfer_dialog">Show New Transfer dialog</string>
    <string name="clear">Clear</string>
    <string name="storage_preference_title">Select Storage Location</string>
    <string name="storage_preference_summary">The default storage location where files will be saved.</string>
    <string name="bittorrent">BitTorrent</string>
    <string name="bittorrent_network_summary">Connection status</string>
    <string name="use_youtube">Use YouTube.com</string>
    <string name="use_soundcloud">Use Soundcloud.com</string>
    <string name="use_archiveorg">Use Archive.org</string>
    <string name="clear_search_cache">Clear search cache</string>
    <string name="clear_search_cache_summary">Clear search cache entries</string>
    <string name="use_frostclick">Use FrostClick</string>
    <string name="anonymous_usage_statistics">Anonymous Usage Statistics</string>
    <string name="anonymous_usage_statistics_summary">Send anonymous usage statistics. No information that can personally identify you will be stored on disk or sent through the network.</string>
    <string name="use_bitsnoop">Use BitSnoop</string>
    <string name="use_torlock">Use TorLock</string>
    <string name="use_torrentdownloads">Use TorrentDownloads</string>
    <string name="use_limetorrents">Use Limetorrents</string>
    <string name="use_eztv">Use Eztv</string>
    <string name="use_btjunkie">Use BTJunkie</string>
    <string name="enable_dht">Enable DHT</string>
    <string name="enable_dht_summary">Use the Distributed Hash Table to announce/search torrent peers</string>
    <string name="notify_frostwire_is_running">Notify if FrostWire is running</string>
    <string name="notify_frostwire_is_running_summary">Show a permanent Android notification with status of transfers</string>
    <string name="haptic_feedback">Haptic Feedback</string>
    <string name="wifi_networks_only">Wi-Fi networks only</string>
    <string name="wifi_networks_only_summary">Save data. Download only if Wi-Fi connection is established. </string>
    <string name="notifications_other_settings">Notifications and Other</string>
    <string name="interface_and_notifications">Interface and Notifications</string>
    <string name="search_preferences">Search Preferences</string>
    <string name="general">General</string>
    <string name="torrent_preferences">Torrent Preferences</string>
</resources>