<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml), Marcelina Knitter (@marcelinkaaa)
 * Copyright (c) 2011-2016, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frostwire="http://schemas.android.com/apk/res-auto"
    android:key="frostwire.prefs.download.preference_category"
    android:persistent="false"
    android:title="@string/downloads">
    <SwitchPreference
        android:key="frostwire.prefs.internal.connect_disconnect"
        android:summary="@string/bittorrent_network_summary"
        android:title="@string/bittorrent" />
    <SwitchPreference
        android:key="frostwire.prefs.network.use_mobile_data"
        android:summary="@string/wifi_networks_only_summary"
        android:title="@string/wifi_networks_only" />
    <com.frostwire.android.gui.views.preference.StoragePreference
        android:key="frostwire.prefs.storage.path"
        android:summary="@string/storage_preference_summary"
        android:title="@string/storage_preference_title" />
    <Preference
        android:key="frostwire.prefs.storage.path_asf"
        android:summary="@string/storage_preference_summary"
        android:title="@string/storage_preference_title">
        <intent android:action="android.intent.action.OPEN_DOCUMENT_TREE" />
    </Preference>

    <PreferenceScreen
        android:key="frostwire.prefs.torrent.preference_category"
        android:persistent="false"
        android:title="@string/torrent_settings">

        <PreferenceCategory android:title="Privacy and sharing">
            <CheckBoxPreference
                android:key="frostwire.prefs.torrent.seed_finished_torrents"
                android:summary="@string/seed_finished_torrents_summary"
                android:title="@string/seed_finished_torrents" />

        </PreferenceCategory>
        <PreferenceCategory android:title="Bandwidth and network">
            <SwitchPreference
                android:key="froswire.prefs.network.enable_dht"
                android:summary="@string/enable_dht_summary"
                android:title="@string/enable_dht" />
            <com.frostwire.android.gui.views.preference.NumberPickerPreference
                android:key="frostwire.prefs.torrent.max_download_speed"
                android:summary="@string/torrent_max_download_speed_summary"
                android:title="@string/torrent_max_download_speed"
                frostwire:picker_defaultValue="0"
                frostwire:picker_endRange="102400"
                frostwire:picker_startRange="0" />
            <com.frostwire.android.gui.views.preference.NumberPickerPreference
                android:key="frostwire.prefs.torrent.max_upload_speed"
                android:summary="@string/torrent_max_upload_speed_summary"
                android:title="@string/torrent_max_upload_speed"
                frostwire:picker_defaultValue="0"
                frostwire:picker_endRange="102400"
                frostwire:picker_startRange="0" />
            <com.frostwire.android.gui.views.preference.NumberPickerPreference
                android:key="frostwire.prefs.torrent.max_downloads"
                android:summary="@string/torrent_max_downloads_summary"
                android:title="@string/torrent_max_downloads"
                frostwire:picker_defaultValue="4"
                frostwire:picker_endRange="10"
                frostwire:picker_startRange="1" />
            <com.frostwire.android.gui.views.preference.NumberPickerPreference
                android:key="frostwire.prefs.torrent.max_uploads"
                android:summary="@string/torrent_max_uploads_summary"
                android:title="@string/torrent_max_uploads"
                frostwire:picker_defaultValue="4"
                frostwire:picker_endRange="10"
                frostwire:picker_startRange="1" />
            <com.frostwire.android.gui.views.preference.NumberPickerPreference
                android:key="frostwire.prefs.torrent.max_total_connections"
                android:summary="@string/torrent_max_total_connections_summary"
                android:title="@string/torrent_max_total_connections"
                frostwire:picker_defaultValue="200"
                frostwire:picker_endRange="200"
                frostwire:picker_startRange="10" />
            <com.frostwire.android.gui.views.preference.NumberPickerPreference
                android:key="frostwire.prefs.torrent.max_peers"
                android:summary="@string/torrent_max_peers_summary"
                android:title="@string/torrent_max_peers"
                frostwire:picker_defaultValue="200"
                frostwire:picker_endRange="200"
                frostwire:picker_startRange="10" />
        </PreferenceCategory>
    </PreferenceScreen>

</PreferenceScreen>
