<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml), Marcelina Knitter (@marcelinkaaa)
 * Copyright (c) 2011-2016, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frostwire="http://schemas.android.com/apk/res-auto"
    android:key="frostwire.prefs.search.preference_category"
    android:persistent="false"
    android:title="@string/search_preferences">
    <com.frostwire.android.gui.activities.ToggleAllSearchEnginesPreference
        android:key="frostwire.prefs.search.preference_category.select_all"
        android:title="@string/select_deselect_all" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_archiveorg"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_archiveorg"
        android:title="@string/use_archiveorg" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_bitsnoop"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_bitsnoop"
        android:title="@string/use_bitsnoop" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_btjunkie"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_btjunkie"
        android:title="@string/use_btjunkie" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_extratorrent"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_extratorrent"
        android:title="@string/use_extratorrent" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_eztv"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_eztv"
        android:title="@string/use_eztv" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_frostclick"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_frostclick"
        android:title="@string/use_frostclick" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_mininova"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_mininova"
        android:title="@string/use_mininova" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_monova"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_monova_summary"
        android:title="@string/use_monova" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_soundcloud"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_soundcloud"
        android:title="@string/use_soundcloud" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_tpb"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_tpb_summary"
        android:title="@string/use_tpb" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_torlock"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_torlock"
        android:title="@string/use_torlock" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_torrentdownloads"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_torrentdownloads"
        android:title="@string/use_torrentdownloads" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_limetorrents"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_limetorrents"
        android:title="@string/use_limetorrents" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_yify"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_yify_summary"
        android:title="@string/use_yify" />
    <CheckBoxPreference
        android:key="frostwire.prefs.search.use_youtube"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/use_youtube"
        android:title="@string/use_youtube" />

    <com.frostwire.android.gui.views.preference.ButtonActionPreference
        android:key="frostwire.prefs.internal.clear_index"
        android:summary="@string/clear_search_cache_summary"
        android:title="@string/clear_search_cache"
        frostwire:button_text="@string/clear" />
</PreferenceScreen>
