<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml), Marcelina Knitter (@marcelinkaaa)
 * Copyright (c) 2011-2016, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="frostwire.prefs.other.preference_category"
    android:persistent="false"
    android:title="@string/notifications_other_settings">
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.enable_permanent_status_notification"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/notify_frostwire_is_running_summary"
        android:title="@string/notify_frostwire_is_running" />
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.show_transfers_on_download_start"
        android:layout="@layout/view_preference_simple_action"
        android:title="@string/show_transfers_on_download_start" />
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.show_new_transfer_dialog"
        android:layout="@layout/view_preference_simple_action"
        android:title="@string/show_new_transfer_dialog" />
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.vibrate_on_finished_download"
        android:layout="@layout/view_preference_simple_action"
        android:title="@string/vibrate_on_finished_download" />
    <CheckBoxPreference
        android:key="frostwire.prefs.gui.haptic_feedback_on"
        android:layout="@layout/view_preference_simple_action"
        android:title="@string/haptic_feedback" />
    <CheckBoxPreference
        android:key="frostwire.prefs.uxstats.enabled"
        android:layout="@layout/view_preference_simple_action"
        android:summary="@string/anonymous_usage_statistics_summary"
        android:title="@string/anonymous_usage_statistics" />
</PreferenceScreen>
