<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Created by Angel Leon (@gubatron), Alden Torres (aldenml), Marcelina Knitter (@marcelinkaaa)
 * Copyright (c) 2011-2016, FrostWire(R). All rights reserved.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="frostwire.prefs.download.preference_category"
    android:persistent="false"
    android:title="@string/downloads">
    <SwitchPreference
        android:key="frostwire.prefs.internal.connect_disconnect"
        android:summary="@string/bittorrent_network_summary"
        android:title="@string/bittorrent" />
    <SwitchPreference
        android:key="frostwire.prefs.network.use_mobile_data"
        android:summary="@string/wifi_networks_only_summary"
        android:title="@string/wifi_networks_only" />
    <com.frostwire.android.gui.views.preference.StoragePreference
        android:key="frostwire.prefs.storage.path"
        android:summary="@string/storage_preference_summary"
        android:title="@string/storage_preference_title" />
    <Preference
        android:key="frostwire.prefs.storage.path_asf"
        android:summary="@string/storage_preference_summary"
        android:title="@string/storage_preference_title">
        <intent android:action="android.intent.action.OPEN_DOCUMENT_TREE" />
    </Preference>
</PreferenceScreen>
